plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.aasx'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// File Upload 관련 의존성
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

	// aas4j 라이브러리
   	implementation 'org.eclipse.digitaltwin.aas4j:aas4j-dataformat-aasx:1.0.4'
   	implementation 'org.eclipse.digitaltwin.aas4j:aas4j-dataformat-json:1.0.4'
   	implementation 'org.eclipse.digitaltwin.aas4j:aas4j-model:1.0.4'
	
    // implementation 'org.eclipse.digitaltwin.aas4j:aas4j-model:1.0.4'
    // implementation 'org.eclipse.digitaltwin.aas4j:aas4j-dataformat-core:1.0.4'
    // implementation 'org.eclipse.digitaltwin.aas4j:aas4j-dataformat-json:1.0.4'
    // implementation 'org.eclipse.digitaltwin.aas4j:aas4j-dataformat-xml:1.0.4'

   	// OPCPackage와 관련된 Apache POI 의존성 추가
    implementation 'org.apache.poi:poi-ooxml:5.2.3'  // 필요에 따라 버전 변경
    implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2'

	// SHA-256 해싱
	implementation 'commons-codec:commons-codec:1.15'

	// sqlite
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.xerial:sqlite-jdbc:3.41.2.1'
	// MyBatis Spring Boot Starte
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

}

tasks.named('test') {
	useJUnitPlatform()
}
